Correct scroll with new overflow flag

--- a/css/src/modules/ReadiumCSS-scroll.css
+++ b/css/src/modules/ReadiumCSS-scroll.css
@@ -22,9 +22,12 @@
 }
 
 /* Make sure line-length is limited in all configs */
+:root:--scroll-view body {
+  max-width: var(--RS__defaultLineLength) !important;
+}
+
 :root:--scroll-view:not(:--no-overflow) body {
   overflow: auto;
-  max-width: var(--RS__defaultLineLength) !important;
 }
 
 @supports (overflow: clip) {
